@@ -3,6 +3,11 @@
 	* pykickstart/options.py (KSOptionParser.check_values):  Use
 	self.lineno instead of lineno.
 
+	* pykickstart/commands/base.py (BaseHandler.__init__):  This looks
+	like the best place to add packages, scripts, and platform.
+	(BaseHandler.__str__):  Write out the whole ks file, though we still
+	need to get commands in the right order.
+
 2006-12-08  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/data.py:  Removed.
